// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceDescription renders with device 1`] = `
<div
  className="content"
  style={Object {}}
>
  <StyledIconBase
    ariaLabel="Device"
    className="iconContent"
    iconName="CellPhone"
  />
  Super-Duper Gadget
</div>
`;

exports[`DeviceDescription renders with emulator 1`] = `
<div
  className="content"
  style={Object {}}
>
  <StyledIconBase
    ariaLabel="Emulator"
    className="iconContent"
    iconName="Devices3"
  />
  Emulator Extraordinaire
</div>
`;

exports[`DeviceDescription renders with extra bottom margin 1`] = `
<div
  className="content"
  style={
    Object {
      "marginBottom": "20px",
    }
  }
>
  <StyledIconBase
    ariaLabel="Device"
    className="iconContent"
    iconName="CellPhone"
  />
  Test Phone
</div>
`;

exports[`DeviceDescription renders with extra top margin 1`] = `
<div
  className="content"
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <StyledIconBase
    ariaLabel="Emulator"
    className="iconContent"
    iconName="Devices3"
  />
  Simple Emulator
</div>
`;
